# yubikey-smart-wallet

./: .gitignore  Makefile  README.md  foundry.toml
circuit/p256_sig_verifier/: Prover.toml  gen_inputs.sh
circuit/p256_sig_verifier/src/: main.nr
circuit/param_gen/: yubikey_sign_verify.sh
circuit/param_gen/src/: main.rs
circuit/rsa_attestation_verifier/: Nargo.toml  gen_inputs.sh
circuit/rsa_attestation_verifier/src/: main.nr
circuit/rsa_sig_verifier/: Nargo.toml
circuit/yk_verify/: Nargo.toml
circuit/yk_verify/src/: lib.nr  p256_verify.nr  rsa_verify.nr
circuits/: README.md
circuits/p256_sig_verifier/: Nargo.toml  Prover.toml
circuits/param_gen/: Cargo.toml  yubikey_key_check.sh  yubikey_sign_verify.sh
circuits/rsa_attestation_verifier/: Prover.toml
circuits/rsa_sig_verifier/: Prover.toml
circuits/rsa_sig_verifier/src/: main.nr
circuits/yk_verify/src/: lib.nr  utils.nr
contracts/: Wallet.sol  Wallet2.sol  WalletFactory.sol  WalletFactory2.sol
contracts/core/: ERC1271.sol  MultiSignable.sol  MultiSignable2.sol
contracts/interfaces/: IVerifier.sol  IVerifier2.sol
contracts/libraries/: StructInputs.sol
contracts/verifier/: ECP256SignatureVerifier.sol  RSA2048AttestationVerifier.sol  RSA2048SignatureVerifier.sol  Verifier.sol  Verifier2.sol
test/: Utils.sol  Verifier.t.sol  Wallet.t.sol
